--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   path_provider: ^2.1.1
   http: ^1.1.2
   flutter_image_compress: ^2.1.0
+  image: ^4.1.3
+  shared_preferences: ^2.2.2
+  uuid: ^4.2.2
 
 dev_dependencies:
   flutter_test:
