--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   image: ^4.1.3
   shared_preferences: ^2.2.2
   uuid: ^4.2.2
+  cached_network_image: ^3.3.0
+  flutter_cache_manager: ^3.3.1
 
 dev_dependencies:
   flutter_test:
