--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   uuid: ^4.2.2
   cached_network_image: ^3.3.0
   flutter_cache_manager: ^3.3.1
+  url_launcher: ^6.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
